--- a/Ex7/src/main/resources/templates/todolist.html
+++ b/Ex7/src/main/resources/templates/todolist.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8"/>
     <title>ToDo List</title>
     <style>
+        .btn {
+            display: inline-block;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            text-decoration: none;
+            color: #fff;
+            background-color: #007bff;
+            cursor: pointer;
+        }
+
+        .btn:hover {
+            background-color: #0069d9;
+        }
+
         body {
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
@@ -42,6 +59,7 @@
 
     </style>
 </head>
+
 <body>
 <h1>Lista zadań:</h1>
 <table>
@@ -50,6 +68,7 @@
         <th>Kategoria</th>
         <th>Opis</th>
         <th>Ważność</th>
+        <th>Termin</th>
     </tr>
     </thead>
     <tbody>
@@ -57,8 +76,11 @@
         <td th:text="${todo.category}"></td>
         <td th:text="${todo.description}"></td>
         <td th:text="${todo.priority}"></td>
+        <td th:text="${todo.localDate}"></td>
     </tr>
+    <a href="/add" class="btn btn-primary">DODAJ NOWE ZADANIE</a>
     </tbody>
 </table>
 </body>
 </html>
+
