--- a/VacationPlaner-WebApp/src/main/resources/templates/teamModifySelectedTeam.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamModifySelectedTeam.html
@@ -7,7 +7,8 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>Modyfikacja</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet"/>
@@ -26,30 +27,31 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Vacation Planner - Modyfikacja</h1>
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item active">by Luz_Blue</li>
-                </ol>
-            </div>
+                <h1 class="mt-4" th:text="${'Zespół:  ' + TeamName}" >Vacation Planner - Modyfikacja</h1>
 
+            </div>
+            <div class="container-fluid px-4">
+                <h3 class="mt-4">Skład zespołu</h3>
+            </div>
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-table me-1"></i>
-                    Lista zespołów
+                    Wybierz pracownika do usunięcia:
                 </div>
                 <div class="card-body">
-                    <table id="datatablesSimple">
+                    <table id="datatablesSimple2">
                         <thead>
                         <tr>
+                            <th>Lp</th>
                             <th>Imie</th>
                             <th>Nazwisko</th>
                             <th>PESEL</th>
                             <th>Opcje</th>
-
                         </tr>
                         </thead>
                         <tfoot>
                         <tr>
+                            <th>Lp</th>
                             <th>Imie</th>
                             <th>Nazwisko</th>
                             <th>PESEL</th>
@@ -58,21 +60,73 @@
                         </tr>
                         </tfoot>
                         <tbody>
-                        <tr th:each="Employee: ${AllEmployees}">
-                            <th th:text="${Employee.getName()}"></th>
+                        <tr th:each="Employee,iter: ${AllTeamEmployees}">
+                            <th th:text="${iter.count}"></th>
+                            <td th:text="${Employee.getName()}"></td>
                             <td th:text="${Employee.getSurname()}"></td>
                             <td th:text="${Employee.getPesel()}"></td>
                             <td>
-                                <a th:href="@{/teamModifySelectedTeam/{id}(id=${Employee.getEmployeeId()})}"  class="btn btn-danger">
+                                <a th:href="@{/teamModifySelectedTeam/delete/{id}/{teamName}
+                                 (id=${Employee.getEmployeeId()},teamName=${TeamName})}"
+                                   class="btn btn-danger">
                                     USUŃ
                                 </a>
                             </td>
                         </tr>
+                        </tbody>
+                    </table>
 
+                </div>
+            </div>
+
+            <div class="container-fluid px-4">
+                <h3 class="mt-4">Pracownicy bez zespołu</h3>
+            </div>
+
+            <div class="card mb-4">
+                <div class="card-header">
+                    <i class="fas fa-table me-1"></i>
+                    Wybierz pracownika którego chcesz dodać do zespołu
+                </div>
+                <div class="card-body">
+                    <table id="datatablesSimple">
+                        <thead>
+                        <tr>
+                            <th>Lp</th>
+                            <th>Imie</th>
+                            <th>Nazwisko</th>
+                            <th>PESEL</th>
+                            <th>Opcje</th>
+                        </tr>
+                        </thead>
+                        <tfoot>
+                        <tr>
+                            <th>Lp</th>
+                            <th>Imie</th>
+                            <th>Nazwisko</th>
+                            <th>PESEL</th>
+                            <th>Opcje</th>
+                        </tr>
+                        </tfoot>
+                        <tbody>
+                        <tr th:each="Employee,iter: ${AllUnassignedEmployees}">
+                            <th th:text="${iter.count}"></th>
+                            <th th:text="${Employee.getName()}"></th>
+                            <td th:text="${Employee.getSurname()}"></td>
+                            <td th:text="${Employee.getPesel()}"></td>
+                            <td>
+                                <a th:href="@{/teamModifySelectedTeam/add/{id}/{teamName}
+                                (id=${Employee.employeeId},teamName=${TeamName})}"
+                                   class="btn btn-success">
+                                    DODAJ
+                                </a>
+                            </td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
+
         </main>
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
