--- a/VacationPlaner-WebApp/src/main/resources/templates/teamModify.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamModify.html
@@ -43,6 +43,7 @@
                         <tr>
                             <th>L.p.</th>
                             <th>Nazwy zespołów</th>
+                            <th>Członków</th>
                             <th>Opcje</th>
                         </tr>
                         </thead>
@@ -50,6 +51,7 @@
                         <tr>
                             <th>L.p.</th>
                             <th>Nazwy zespołów</th>
+                            <th>Członków</th>
                             <th>Opcje</th>
                         </tr>
                         </tfoot>
@@ -57,6 +59,7 @@
                         <tr th:each="Team,iter: ${AllTeams}">
                             <td th:text="${iter.count}"></td>
                             <td th:text="${Team.getTeamName()}"></td>
+                            <td th:text="${Team.getTeamName}"></td>
                             <td>
                                 <a th:href="@{/teamModifySelectedTeam/{teamName}(teamName=${Team.getTeamName()})}" class="btn btn-primary">
                                     Modyfikuj
