--- a/VacationPlaner-WebApp/src/main/resources/templates/teamModifySelectedTeam.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamModifySelectedTeam.html
@@ -28,8 +28,25 @@
         <main>
             <div class="container-fluid px-4">
                 <h1 class="mt-4" th:text="${'Zespół:  ' + TeamName}" >Vacation Planner - Modyfikacja</h1>
-
             </div>
+
+            <div class="container">
+                <form action="#" th:action="@{/}" th:object="${TeamName}" method="post"
+                      class="row g-3 needs-validation" novalidate>
+                    <div class="col-md-4">
+                        <label for="validationCustom01" th:field="${TeamName}" class="form-label">Zmień nazwę zespołu</label>
+                        <input type="text" name = "teamName" class="form-control" id="validationCustom01">
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button class="btn btn-success" type="submit">Zapisz zmiane </button>
+                    </div>
+                </form>
+            </div>
+
+
             <div class="container-fluid px-4">
                 <h3 class="mt-4">Skład zespołu</h3>
             </div>
