--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
@@ -31,7 +31,11 @@
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
             </div>
-
+            <div class="card-header">
+                <i class="fas fa-table me-1"></i>
+                Dodaj Pracownika
+            </div>
+            <h1> </h1>
             <div class="container">
                 <form action="#" th:action="@{/employeeAdd}" th:object="${employeeKeyAdd}" method="post"
                       class="row g-3 needs-validation" novalidate>
