Vacation date fixed

--- a/VacationPlaner-WebApp/src/main/resources/templates/vacationAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/vacationAdd.html
@@ -65,9 +65,9 @@
                     <div class="col-md-4">
                         <label for="start" class="form-label">Rodzaj Urlopu</label>
                         <select class="form-select">
-                            <option value="1" th:fild="*{vacationType}">Wypoczynkowy</option>
-                            <option value="2" th:fild="*{vacationType}">Na żądanie</option>
-                            <option value="3" th:fild="*{vacationType}">Inny</option>
+                            <option value="1" th:field="*{vacationType}">Wypoczynkowy</option>
+                            <option value="2" th:field="*{vacationType}">Na żądanie</option>
+                            <option value="3" th:field="*{vacationType}">Inny</option>
                         </select>
                     </div>
                     <div class="col-12">
