--- a/VacationPlaner-WebApp/src/main/resources/templates/vacationModify.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/vacationModify.html
@@ -22,6 +22,7 @@
 
     <div th:insert="~{commonCode/LeftNavBarTemplate :: body}"></div>
 
+
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
@@ -30,6 +31,43 @@
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
             </div>
+
+            <div class="container">
+                <form action="#" th:action="@{/vacationAdd/{id}(id=${Employee.employeeId})}" th:object="${Vacation}" method="post"
+                      class="row g-3 needs-validation" novalidate>
+                    <div class="col-md-4">
+                        <label for="validationCustom01" class="form-label">Imię</label>
+                        <input type="text" th:field="*{name}" class="form-control" id="validationCustom01" disabled>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="validationCustom02" class="form-label">Nazwisko</label>
+                        <input type="text" th:field="*{surname}" class="form-control" id="validationCustom02" disabled>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="start" class="form-label">Od</label>
+                        <input type="date" th:field="*{start}" class="form-control" id="start">
+                    </div>
+
+                    <div class="col-md-4">
+                        <label for="validationCustom02" class="form-label">Do</label>
+                        <input type="date" th:field="*{stop}" class="form-control" id="va">
+                    </div>
+
+                    <div class="col-md-4">
+                        <label for="start" class="form-label">Rodzaj Urlopu</label>
+                        <select class="form-select">
+                            <option value="1" th:field="*{vacationType}">Wypoczynkowy</option>
+                            <option value="2" th:field="*{vacationType}">Na żądanie</option>
+                            <option value="3" th:field="*{vacationType}">Inny</option>
+                        </select>
+                    </div>
+                    <div class="col-12">
+                        <button class="btn btn-success" type="submit">Dodaj Urlopa</button>
+                    </div>
+                </form>
+            </div>
+
+
         </main>
 
 
