Modyfie vacation bug fix

--- a/VacationPlaner-WebApp/src/main/resources/templates/vacationModify.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/vacationModify.html
@@ -47,7 +47,7 @@
                         <input type="date" th:field="*{stop}" class="form-control" id="va">
                     </div>
                     <input type="hidden" th:field="*{employeeID}" class="form-control" id="employeeId">
-                    <input type="text" th:field="*{vacationId}" class="form-control" id="vacationId">
+                    <input type="hidden" th:field="*{vacationId}" class="form-control" id="vacationId">
                     <input type="hidden" th:field="*{name}" class="form-control" id="name">
                     <input type="hidden" th:field="*{surname}" class="form-control" id="surname">
                     <div class="col-md-4">
