Modyfie vacation bug fix

--- a/VacationPlaner-WebApp/src/main/resources/templates/teamModifySelectedTeam.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamModifySelectedTeam.html
@@ -27,7 +27,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4" th:text="${'Zespół:  ' + TeamName}" >Vacation Planner - Modyfikacja</h1>
+                <h1 class="mt-4" th:text="${'Zespół:  ' + TeamName}" ></h1>
             </div>
 
             <div class="container">
