--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeList.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeList.html
@@ -47,6 +47,7 @@
                             <th>PESEL</th>
                             <th>Email</th>
                             <th>Adres</th>
+                            <th>Zespół</th>
                             <th>Numer Telefonu</th>
                         </tr>
                         </thead>
@@ -58,6 +59,7 @@
                             <th>PESEL</th>
                             <th>Email</th>
                             <th>Adres</th>
+                            <th>Zespół</th>
                             <th>Numer Telefonu</th>
                         </tr>
                         </tfoot>
@@ -69,6 +71,7 @@
                             <td th:text="${Employee.getPesel()}"></td>
                             <td th:text="${Employee.email}"></td>
                             <td th:text="${Employee.getAddress()}"></td>
+                            <td th:text="${Employee.getTeam() == 'UnAssignedTeam' ? 'Bez zespołu' : Employee.getTeam()}"></td>
                             <td th:text="${Employee.getPhoneNumber()}"></td>
                         </tr>
                         </tbody>
